# mtmelections

./: CMakeLists.txt  Candidate.c  Candidate.h  City.c  City.h  Makefile  Vote.c  Vote.h  citizen.c  citizen.h  main.c  mayor.c  mayor.h  mtmElections  mtm_elections.c  mtm_elections.h  mtm_elections_tests.c  mtm_elections_tests.h  mtm_print.c  out  performElectionsOut  preference.c  preference.h  set.h  typedefs_and_general_functions.c  typedefs_and_general_functions.h  uniqueOrderedListTest.c  uniqueOrderedListTest.h
mtm_uol/: uniqueOrderedList.c
uniqueOrderedList/: UniqueOrderedList.c  Vote.c  Vote.h  uniqueOrderedList.h
